<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_first_group">
        <item
            android:id="@+id/action_receipt"
            android:icon="@drawable/tab_receive"
            android:title="@string/receive" />
        <item
            android:id="@+id/action_wallet"
            android:icon="@drawable/tab_wallet"
            android:title="@string/wallet" />
        <item
            android:id="@+id/action_subscriptions"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/subscriptions" />
        <item
            android:id="@+id/action_offline"
            android:icon="@drawable/tab_offline"
            android:title="@string/offline" />
        <item
            android:id="@+id/action_sender"
            android:icon="@drawable/tab_send"
            android:title="@string/send" />
        <item
            android:id="@+id/action_switch_account"
            android:icon="@drawable/ic_switch_account_white_24dp"
            android:title="@string/switch_account" />
        <item
            android:id="@+id/action_add_account"
            android:icon="@drawable/ic_add_account_white_24dp"
            android:title="@string/add_account" />
        <item
            android:id="@+id/action_unregister"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/unregister" />
        <item
            android:id="@+id/action_oss"
            android:icon="@drawable/ic_library_books_white_24dp"
            android:title="@string/open_source_license" />
    </group>
</menu>
